--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,144 @@
+/* ----------------navigation-------------------- */
+    nav{
+        display: flex;
+        justify-content: space-around; 
+        gap: 255px; 
+    }
+    ul{
+        gap: 34px;
+        display: flex;
+        align-items: center;
+    }
+    .nav-heading{
+        color: #3A3A3A;
+        font-size: 24px;
+        font-family: Poppins;
+        font-weight: 700;
+    }
+    li a{
+        color: #3A3A3A;
+        font-size: 16px;
+        font-family: Poppins;
+        font-weight: 600;
+        text-decoration: none;
+    }
+    ul li{
+        list-style: none;
+    }
+ /* -----------------banner---------------------------    */
+    .container{
+        display: flex;
+        grid-template-columns: repeat(2, 1fr);
+        width: 1160px;
+        height: 539px;
+        margin: 0px auto;
+        gap: 186px;
+        margin-top: 38px;
+    }
+    .banner-tittle{
+        width: 100%;
+    }
+    .circle{
+        width: 475px;
+        height: 475px;
+    }
+    .circle img{
+        width: 100%;
+    }
+    .camera {
+        position: relative;
+        bottom: 443px;
+        width: 440px;
+        height: 414px;
+    }
+    .camera img{
+        width: 100%;
+    }
+    .banner-tittle{
+        width: 496px;
+        height: 341px;
+        margin-top: 87px;
+    }
+    .banner-tittle h2{
+        color: #3A3A3A;
+        font-size: 52px;
+        font-family: Poppins;
+        font-weight: 700;
+        line-height: 70px;
+    }
+    .banner-tittle p{
+        width: 416px;
+        color: #3A3A3A;
+        font-size: 16px;
+        font-family: Poppins;
+        font-weight: 600;
+    }
+    .banner-button{
+        background-color: #E02C6D;
+        color: white;
+        padding: 10px 24px 10px 24px;
+        border-radius: 41px;
+        border: 0px;
+        color: white;
+        font-size: 16px;
+        font-family: Poppins;
+        font-weight: 700;
+    }
+    .banner-button:hover{
+        box-shadow: 4px 7px 12px grey;
+    }
+    .banner-button:active{
+        background-color: black;
+        color: chartreuse;
+    }
+
+
+
+
+
+
+
+/* ==================responsive--------------------- */
 @media screen and (max-width:576px) {
+    /* ------------navigation------------- */
+    nav{
+        justify-content: flex-end;
+        gap: 0px;
+    }
+    .invisible{
+        display: none;
+    }
+    /* --------------banner---------------- */
+    .container{
+       flex-direction: column-reverse;
+       gap: 20px;
+       margin: 0px;
+       height: 100%;
+       width: 100%;
+    }
+    .banner-tittle{
+        width: 100%;
+    }
+    .banner-tittle h2{
+        font-size: 32px;
+        text-align: center;
+    }
+    .banner-tittle p{
+        width: 100%;
+        text-align: center;
+    }
+    .banner-button{
+        margin-left: 100px;
+    }
+    .banner-image{
+        height: 272px;
+    }
+    .circle{
+        width: 100%;
+    }
+    .camera{
+        width: 90%;
+        bottom: 447px;
+    }
     
 }
