--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,21 @@
         background-color: black;
         color: chartreuse;
     }
-
+/* ---------------shop-company------------------ */
+    .container1{
+        gap: 61px;
+        display: grid;
+        grid-template-columns: repeat(7,1fr);
+        align-items: center;
+        border-top: 1px solid rgb(230, 230, 230) ;
+        border-bottom: 1px solid rgb(230, 230, 230);
+        padding: 35px 10px 35px 10px;
+        width: 85%;
+        margin: 0 auto;
+    }
+    .container1 img{
+        width: 100%;
+    }
 
 
 
@@ -140,5 +154,15 @@
         width: 90%;
         bottom: 447px;
     }
-    
+ /* --------------------shop-center--------------       */
+    .container1{
+        grid-template-columns: repeat(4, 1fr);
+        gap: 0px;
+        row-gap: 18px;
+        column-gap: 35px;
+        padding: 15px 5px 10px 5px;
+    }
+    .shoping{
+        margin-left: 35px;
+    }
 }
