--- a/style/style.css
+++ b/style/style.css
@@ -99,15 +99,96 @@
         align-items: center;
         border-top: 1px solid rgb(230, 230, 230) ;
         border-bottom: 1px solid rgb(230, 230, 230);
-        padding: 35px 10px 35px 10px;
+        padding: 25px 10px 25px 10px;
         width: 85%;
         margin: 0 auto;
     }
     .container1 img{
         width: 100%;
     }
-
-
+/* -----------------------card------------------ */
+    .container2{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .card-head{
+        text-align: center;
+        margin-top: 70px;
+        color: #3A3A3A;
+        font-size: 28px;
+        font-family: Poppins;
+        font-weight: 600;
+        line-height: 70px;
+    }
+    .card{
+        max-width: 329px;
+        padding: 17px 15px 5px 14px;
+        box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+        border-radius: 5px;
+    }
+    .card img{
+        width: 100%;
+    }
+    .card h3{
+        margin-top: 13px;
+        color: #18191F;
+        font-size: 28px;
+        font-family: Poppins;
+        font-weight: 500;
+        line-height: 40px;
+    }
+    .card-p{
+        color: rgba(0, 0, 0, 0.87);
+        font-size: 24px;
+        font-family: Inter;
+        font-weight: 400;
+        line-height: 36px;
+        margin-top: -17px;
+        margin-bottom: 6px;
+    }
+    .star , .describe{
+        margin-top: 7px;
+    }
+    .describe{
+        width: 60%;
+        color: #787885;
+        font-size: 14px;
+        font-family: Inter;
+        font-weight: 700;
+        line-height: 20.02px;
+        letter-spacing: 0.25px;
+    }
+    .star{
+        font-size: 12px;
+    }
+    .rate{
+        margin-left: 5px;
+        color: #5E6366;
+        font-size: 14px;
+        font-family: Roboto;
+        font-weight: 700;
+        line-height: 22px;
+        letter-spacing: 0.10px;
+    }
+    .see-more{
+        background-color: white;
+        border: 0px;
+        margin-left: 252px;
+        color: rgba(224.19, 43.90, 108.81, 0.87);
+        font-size: 16px;
+        font-family: Poppins;
+        font-weight: 700;
+    }
+    .see-more:hover{
+        padding: 2px;
+        border-radius: 5px;
+    }
+    .see-more:active{
+        color: blue;
+    }
 
 
 
@@ -164,5 +245,15 @@
     }
     .shoping{
         margin-left: 35px;
+    }
+    /* -----------------card------------------ */
+    .container2{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .see-more{
+        margin-left: 189px;
+    }
+    .invisible-respo{
+        display: none;
     }
 }
