--- a/style/style.css
+++ b/style/style.css
@@ -118,9 +118,9 @@
         text-align: center;
         margin-top: 70px;
         color: #3A3A3A;
-        font-size: 28px;
+        font-size: 38px;
         font-family: Poppins;
-        font-weight: 600;
+        font-weight: 700;
         line-height: 70px;
     }
     .card{
@@ -137,14 +137,14 @@
         color: #18191F;
         font-size: 28px;
         font-family: Poppins;
-        font-weight: 500;
+        font-weight: 700;
         line-height: 40px;
     }
     .card-p{
         color: rgba(0, 0, 0, 0.87);
         font-size: 24px;
         font-family: Inter;
-        font-weight: 400;
+        font-weight: 540;
         line-height: 36px;
         margin-top: -17px;
         margin-bottom: 6px;
@@ -155,7 +155,7 @@
     .describe{
         width: 60%;
         color: #787885;
-        font-size: 14px;
+        font-size: 16px;
         font-family: Inter;
         font-weight: 700;
         line-height: 20.02px;
@@ -167,7 +167,7 @@
     .rate{
         margin-left: 5px;
         color: #5E6366;
-        font-size: 14px;
+        font-size: 16px;
         font-family: Roboto;
         font-weight: 700;
         line-height: 22px;
@@ -181,6 +181,7 @@
         font-size: 16px;
         font-family: Poppins;
         font-weight: 700;
+        margin-bottom: 100px;
     }
     .see-more:hover{
         padding: 2px;
@@ -188,6 +189,88 @@
     }
     .see-more:active{
         color: blue;
+    }
+    /* -------------------------last image description-------------------- */
+    .container3{
+        display: flex;
+        gap: 90px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .image img{
+        width: 100%;
+    }
+    .image-tittle{
+        width: 60%;
+    }
+    .image-tittle h2{
+        margin-bottom: 0px;
+        color: #3A3A3A;
+        font-size: 52px;
+        font-weight: 700;
+        font-family: Poppins;
+    }
+    .image-tittle p{
+        width: 71%;
+        color: #787885;
+        font-size: 19px;
+        font-family: Inter;
+        font-weight: 700;
+        line-height: 20.02px;
+        letter-spacing: 0.25px;
+    }
+    .img-button{
+        background-color: #E02C6D;
+        font-size: 17px;
+        font-weight: 700;
+        color: white;
+        padding: 5px 10px;
+        border: 0px;
+        border-radius: 5px;
+    }
+    .img-button:hover{
+        box-shadow: 2px 5px 7px gray;
+    }
+    .img-button:active{
+        background-color: black;
+    }
+    /* -------------------footer------------------------- */
+    body{
+        margin: 0px;
+    }
+    .container4{
+        width: 100%;
+        height: 239px;
+        background: #0A0826;
+        margin-top: 100px;
+        padding-top: 100px;
+    }
+    .box4{
+        color: white;
+    }
+    .box4 h2{
+        text-align: center;
+        font-size: 24px;
+        font-family: Poppins;
+        font-weight: 700;
+    }
+    .box4 p{
+        text-align: center;
+        color: #D9DBE1;
+        font-size: 14px;
+        font-family: Manrope;
+        font-weight: 700;
+        line-height: 24px;
+    }
+    .footer-image{
+        margin: 0 auto;
+        justify-content: center;
+        width: 20%;
+        display: flex;
+        gap: 16px;
+    }
+    .icons img{
+        width: 100%;
     }
 
 
@@ -252,8 +335,35 @@
     }
     .see-more{
         margin-left: 189px;
+        margin-bottom: 8px;
     }
     .invisible-respo{
         display: none;
+    }
+    /* ------------------last image-description----------------- */
+    .container3{
+        flex-direction: column-reverse;
+        gap: 25px;
+    }
+    .image-tittle{
+        width: 100%;
+    }
+    .image-tittle h2{
+        font-size: 32px;
+        text-align: center;
+    }
+    .image-tittle p{
+        width: 100%;
+        text-align: center;
+    }
+    .img-button{
+        margin-left: 118px;
+    }
+    /* -------------------footer-------------------------- */
+    .container4{
+        margin-top: 45px;
+    }
+    .footer-image{
+        width: 40%;
     }
 }
